Elementos agregados a tabla 1

--- a/New Playlist/index.html
+++ b/New Playlist/index.html
@@ -29,6 +29,30 @@
                     <th>39,566</th>
                     <th>4:21</th>
                 </tr>
+                <tr>
+                    <th>2</th>
+                    <th>#</th>
+                    <th>Kamelia</th>
+                    <th>DDY Nunes</th>
+                    <th>32,420</th>
+                    <th>3:30</th>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <th>#</th>
+                    <th>Laugh Till You Cry</th>
+                    <th>Faydee</th>
+                    <th>28,221</th>
+                    <th>3:56</th>
+                </tr>
+                <tr>
+                    <th>4</th>
+                    <th>#</th>
+                    <th>I Don't Know</th>
+                    <th>Deejay Fly</th>
+                    <th>21,528</th>
+                    <th>2:26</th>
+                </tr>
             </table>
         </div>
 
