--- a/New Playlist/index.html
+++ b/New Playlist/index.html
@@ -13,12 +13,17 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+
+        <!-- Icons -->
+        <script src="https://kit.fontawesome.com/c84cfa1036.js" crossorigin="anonymous"></script>
 
         <title>New Playlist</title>
     </head>
     <body class="body">
         <div>
-            <table class="main-table" style="width: 100%;">
+            <table class="col-auto" class="main-table" style="width: 100%;">
+                <caption class="main-table__first-caption">Canciones populares en la zona</caption>
                 <tr class="first-tr">
                     <td class="first-tr" id="first-td">#</td>
                     <td class="first-tr" class="second-td">Agregar</td>
@@ -60,6 +65,10 @@
                     <td class="fifth-tr">2:26</td>
                 </tr>
             </table>
+        </div>
+        <div>
+            <p class="button__show-more">Show More</p>
+            <i class="fas fa-arrow-down"></i>
         </div>
 
                 <!-- Optional JavaScript -->
