cambios en new playlist

--- a/New Playlist/index.html
+++ b/New Playlist/index.html
@@ -22,8 +22,8 @@
     </head>
     <body class="body">
         <div>
-            <table class="col-auto" class="main-table" style="width: 100%;">
-                <caption class="main-table__first-caption">Canciones populares en la zona</caption>
+            <table class="col-xl-9" class="main-table" style="width: 100%;">
+                <caption  class="col-xl-3" class="main-table__first-caption">Canciones populares en la zona</caption>
                 <tr class="first-tr">
                     <td class="first-tr" id="first-td">#</td>
                     <td class="first-tr" class="second-td">Agregar</td>
@@ -68,7 +68,6 @@
         </div>
         <div>
             <p class="button__show-more">Show More</p>
-            <i class="fas fa-arrow-down"></i>
         </div>
 
                 <!-- Optional JavaScript -->
