renombre index2 > home

--- a/New Playlist/index.html
+++ b/New Playlist/index.html
@@ -22,6 +22,11 @@
     </head>
     <body class="body">
         <div>
+            <form action="">
+                <input class="form__search" type="text" value="Busca una canción">
+            </form>
+        </div>
+        <div>
             <table class="col-xl-9" class="main-table" style="width: 100%;">
                 <caption  class="col-xl-3" class="main-table__first-caption">Canciones populares en la zona</caption>
                 <tr class="first-tr">
