cambios a new-playlist

--- a/New Playlist/new-playlist.html
+++ b/New Playlist/new-playlist.html
@@ -23,7 +23,8 @@
     <body class="body">
         <div>
             <form class="form_search" action="">
-                <input class="input__search" type="text" value="Busca una canción">
+                <input class="input__search" class="col-xl-2" type="text" value="Busca una canción">
+                <input class="input__playlist-name" type="text" value="Baila sin parar">
             </form>
         </div>
         <div>
