Edite el html de search-playlist

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -10,8 +10,23 @@
      <link rel="stylesheet" href="css/style.css">
      <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="img/">
 </head>
 <body>
-    
+    <div>
+        <form class="search__playlist">
+            <input type="text" value="Reggaeton">
+            <input type="button" value="Nueva Playlist">
+        </form>
+        <div>
+            <div class="search__music-img"><img src="img1.jpg" alt=""> Full Regaeton </div>
+            <div class="search__music-img"><img src="img2.jpg" alt=""> Reggaeton 2020 </div>
+            <div class="search__music-img"><img src="img3.jpg" alt=""> Remixes </div>
+            <div class="search__music-img"><img src="img4.jpg" alt=""> Vieja Escuela </div>
+            <div class="search__music-img"><img src="img5.jpg" alt=""> Raggeton Clasico </div>
+            <div class="search__music-img"><img src="img6.jpg" alt=""> Enganchados </div>
+            <div class="search__music-img"><img src="img7.jpg" alt=""> Urbana </div>
+        </div>
+    </div>
 </body>
 </html>
