--- a/search-playlist.html
+++ b/search-playlist.html
@@ -6,8 +6,10 @@
     <title>Search Playlist</title>
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+     <!-- CSS -->
      <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/edit-playlist.css">
+     
      <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="img/">
@@ -18,14 +20,59 @@
             <input type="text" value="Reggaeton">
             <input type="button" value="Nueva Playlist">
         </form>
+        <h1>Playists</h1>
+        <div class="col-sm-6 col-xl-2">
+            <div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton">
+                <h3>Full Regaeton</h3>
+                <p>15 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img2.jpg" alt="Reggaeton 2020">
+                <h3>Reggaeton 2020</h3>
+                <p>21 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img3.jpg" alt="Remixes">
+                <h3>Remixes</h3>
+                <p>32 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img4.jpg" alt="Vieja Escuela">
+                <h3>Vieja Escuela</h3>
+                <p>12 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img5.jpg" alt="Reggaeton Clasico">
+                <h3>Raggeton Clasico</h3>
+                <p>10 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img6.jpg" alt="Enganchados">
+                <h3>Enganchados</h3>
+                <p>22 Canciones</p>
+            </div>
+            <div class="search__music-img"><img src="img/img7.jpg" alt="Urbana">
+                <h3>Urbana</h3>
+                <p>30 Canciones</p>
+            </div>
+        </div>
         <div>
-            <div class="search__music-img"><img src="img1.jpg" alt=""> Full Regaeton </div>
-            <div class="search__music-img"><img src="img2.jpg" alt=""> Reggaeton 2020 </div>
-            <div class="search__music-img"><img src="img3.jpg" alt=""> Remixes </div>
-            <div class="search__music-img"><img src="img4.jpg" alt=""> Vieja Escuela </div>
-            <div class="search__music-img"><img src="img5.jpg" alt=""> Raggeton Clasico </div>
-            <div class="search__music-img"><img src="img6.jpg" alt=""> Enganchados </div>
-            <div class="search__music-img"><img src="img7.jpg" alt=""> Urbana </div>
+            <div>
+                <img class="search__music-img" src="img/img1.jpg" alt="Reggaeton">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img2.jpg" alt="Reggaeton 2020">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img3.jpg" alt="Remixes">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img4.jpg" alt="Vieja Escuela">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img5.jpg" alt="Reggaeton Clasico">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img6.jpg" alt="Enganchados">
+            </div>
+            <div>
+                <img class="search__music-img" src="img/img7.jpg" alt="Urbana">
+            </div>
         </div>
     </div>
 </body>
