new playlist TERMINADA

--- a/new-playlist.html
+++ b/new-playlist.html
@@ -99,9 +99,10 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <div>
             <footer>
-                <div>
-                    <h1>Diseñado en Uruguay</h1>
-                    <h1>Powered by</h1>
+                <div class="main__footer">
+                    <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
+                    <h1 class="footer__powered-by">Powered by</h1>
+                    <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </div>
             </footer>
         </div>
