--- a/search-playlist.html
+++ b/search-playlist.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Playlist</title>
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-     <!-- CSS -->
-     <link rel="stylesheet" href="css/style.css">
-     <link rel="stylesheet" href="css/edit-playlist.css">
-     
-     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="img/">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/search-playlist.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="img/">
 </head>
 <body>
     <div>
@@ -21,7 +21,7 @@
             <input type="button" value="Nueva Playlist">
         </form>
         <h1>Playists</h1>
-        <div class="col-sm-6 col-xl-2">
+        <div class="col-sm-6 col-xl-8">
             <div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton">
                 <h3>Full Regaeton</h3>
                 <p>15 Canciones</p>
@@ -52,26 +52,26 @@
             </div>
         </div>
         <div>
-            <div>
-                <img class="search__music-img" src="img/img1.jpg" alt="Reggaeton">
+            <div class="search__music-img">
+                <img src="img/img1.jpg" alt="Reggaeton">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img2.jpg" alt="Reggaeton 2020">
+            <div class="search__music-img">
+                <img src="img/img2.jpg" alt="Reggaeton 2020">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img3.jpg" alt="Remixes">
+            <div class="search__music-img">
+                <img src="img/img3.jpg" alt="Remixes">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img4.jpg" alt="Vieja Escuela">
+            <div class="search__music-img">
+                <img src="img/img4.jpg" alt="Vieja Escuela">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img5.jpg" alt="Reggaeton Clasico">
+            <div class="search__music-img">
+                <img src="img/img5.jpg" alt="Reggaeton Clasico">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img6.jpg" alt="Enganchados">
+            <div class="search__music-img">
+                <img src="img/img6.jpg" alt="Enganchados">
             </div>
-            <div>
-                <img class="search__music-img" src="img/img7.jpg" alt="Urbana">
+            <div class="search__music-img">
+                <img src="img/img7.jpg" alt="Urbana">
             </div>
         </div>
     </div>
