--- a/login.html
+++ b/login.html
@@ -6,21 +6,17 @@
     <title>Login</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<<<<<<< HEAD
     <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/home.css">
-=======
-    <link rel="stylesheet" href="styles.css">
->>>>>>> 1403c3a469a40d5169be2709fc52e7a322dadd0e
 </head>
 <body>
     <div>
         <h1 class="form__login-top">Para continuar, inicia sesión</h1>
         <form class="form__login" action="">
-            <input class="form__login-username" type="text" value="Correo electrónico o nombre de usuario">
+            <input class="form__login-username" type="text" placeholder="Correo electrónico o nombre de usuario">
             <br>
-            <input class="form__login-pasword" type="password" value="Contraseña">
+            <input class="form__login-pasword" type="password" placeholder="Contraseña">
         </form>
         <br>
         <form action="">
