add class to div

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -51,7 +51,7 @@
                 <p>30 Canciones</p>
             </div>
         </div>
-        <div>
+        <div class="col-sm-6 col-xl-2">
             <div class="search__music-img">
                 <img src="img/img1.jpg" alt="Reggaeton">
             </div>
