--- a/register.html
+++ b/register.html
@@ -14,19 +14,19 @@
     <div>
         <h1 class="form__register-top">Registrate con tu dirección de email</h1>
         <form action="">
-            <input class="form__register-email" type="text" value="Correo electrónico" required>
+            <input class="form__register-email" type="text" placeholder="Correo electrónico" required>
             <br>
-            <input class="form__register-confirm-email" type="text" value="Confirmar correo electrónico" required>
+            <input class="form__register-confirm-email" type="text" placeholder="Confirmar correo electrónico" required>
             <br>
-            <input class="form__register-pasword" type="password" value="Contraseña" required>
+            <input class="form__register-pasword" type="password" placeholder="Contraseña" required>
             <br>
-            <input class="form__register-username" type="text" value="Nombre de Usuario" required>
+            <input class="form__register-username" type="text" placeholder="Nombre de Usuario" required>
         </form>
         <h2 class="form__register-bootom">FECHA DE NACIMIENTO</h2>
         <form action="">
-            <input class="form__register-day" type="text" value="Día" required>
-            <input class="form__register-month" type="text" value="Mes" required>
-            <input class="form__register-age" type="text" value="Año" required>
+            <input class="form__register-day" type="text" placeholder="Día" required>
+            <input class="form__register-month" type="text" placeholder="Mes" required>
+            <input class="form__register-age" type="text" placeholder="Año" required>
             <br>
             <input type="radio" type="radio">Masculino
             <input type="radio" type="radio">Femenino
