edit playlist terminada

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -16,6 +16,14 @@
 </head>
 <body>
     <div>
+        <header>
+            <div class="main__header">
+                <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
+                <h1 class="header__user" class="col-xl-auto">Usuario</h1>
+            </div>
+        </header>
+    </div>
+    <div>
         <form class="search__playlist">
             <input type="text" value="Reggaeton">
             <input type="button" value="Nueva Playlist">
