--- a/home.html
+++ b/home.html
@@ -6,39 +6,52 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        <title>Home</title>
         <!-- CSS -->
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/home.css">
+        <title>Home</title>
 
-        <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+        <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <header>
-            <h2 class="container main_title_logo">Sprintify</h2>
-            <div class="login_register">
-                <h2 class="register">Registrarse</h2>
-                <h2 class="login">Iniciar Sesión</h2>
-            </div>
-        </header>
+    <body class="body">
         <div>
-            <div>
-                <h1 class="main_title">PONGAMOS MÚSICA, JUNTOS</h1>
-            </div>
-        <div class="home__background-image"></div>
+            <header>
+                <div class="main__header">
+                    <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
+                    <h1 class="header__register" class="header__login-register" class="col-xl-auto">Registrarse</h1>
+                    <h1 class="header__login" class="header__login-register" class="col-xl-auto">Iniciar Sesión</h1>
+                </div>
+            </header>
         </div>
+        <div class="home__background-image">
+            <div>
+                <h1 class="main__home-title">PONGAMOS MÚSICA, JUNTOS</h1>
+            </div>
+            <div>
+                <form action="">
+                    <input class="input__search" type="text" placeholder="Buscar una playlist">
+                    <input class="input__button" type="button" value="NUEVA PLAYLIST">
+                </form>
+            </div>
+        </div>
+
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE    +IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft    +2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <footer>
-            <h2 class="design">Diseñado en Uruguay</h2>
-            <h2 class="powered-by">Powered by</h2>
-            <img class="logo_2" src="https://lh3.googleusercontent.com/proxy/JtZyisWR3Jkdzkm8fDzkBMbVQt5AKvOZJSeGcyjjsRumUVW7gYoW34cTPRtR0HZypZ0Sxj9qVzrh73ap77V4KraPN6nlkLAG-CPKpmjK87CpJCbOJ___4_EFxbE-o7131yTwtqX6O5b5GoLO9c1NZ2VYRYsg6zC_pj00oaZt" alt="Spotify Logo">
-        </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+        <div>
+            <footer>
+                <div class="main__footer">
+                    <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
+                    <h1 class="footer__powered-by">Powered by</h1>
+                    <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
