edite las imagenes

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -59,31 +59,29 @@
                 <p>30 Canciones</p>
             </div>
         </div>
-<<<<<<< HEAD
-        <div class="col-sm-6 col-xl-2">
-=======
-        <div class="col-sm-6 col-xl-8">
->>>>>>> e630f36705f4bd8caf8188de4d51e276740c0ad4
-            <div class="search__music-img">
-                <img src="img/img1.jpg" alt="Reggaeton">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img2.jpg" alt="Reggaeton 2020">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img3.jpg" alt="Remixes">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img4.jpg" alt="Vieja Escuela">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img5.jpg" alt="Reggaeton Clasico">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img6.jpg" alt="Enganchados">
-            </div>
-            <div class="search__music-img">
-                <img src="img/img7.jpg" alt="Urbana">
+        <div class="container">
+            <div class="col-sm-6 col-xl-2">
+                <div class="search__music-img">
+                    <img src="img/img1.jpg" alt="Reggaeton">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img2.jpg" alt="Reggaeton 2020">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img3.jpg" alt="Remixes">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img4.jpg" alt="Vieja Escuela">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img5.jpg" alt="Reggaeton Clasico">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img6.jpg" alt="Enganchados">
+                </div>
+                <div class="search__music-img">
+                    <img src="img/img7.jpg" alt="Urbana">
+                </div>
             </div>
         </div>
     </div>
