--- a/search-playlist.html
+++ b/search-playlist.html
@@ -25,8 +25,8 @@
     </div>
     <div>
         <form class="search__playlist">
-            <input type="text" value="Reggaeton">
-            <input type="button" value="Nueva Playlist">
+            <input class="search__secion-browser" type="text" placeholder="Reggaeton">
+            <input class="search__secion-button" type="button" value="Nueva Playlist">
         </form>
         <h1>Playists</h1>
         <div class="container">
