cambie algunas cosas

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
             <header>
                 <div class="main__header">
                     <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
-                    <a href="register.html" class="header__register header__login-register col-xl-auto">Registrate</a>
-                    <a href="login.html" class="header__login header__login-register col-xl-auto">Iniciar Sesión</a>
+                    <a href="register.html" class="header__register header__login-register">Registrate</a>
+                    <a href="login.html" class="header__login header__login-register">Iniciar Sesión</a>
                 </div>
             </header>
         </div>
