--- a/login.html
+++ b/login.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
-<<<<<<< HEAD
         <link rel="stylesheet" href="css/login.css">
-=======
-        <link rel="stylesheet" href="css/home.css">
->>>>>>> e630f36705f4bd8caf8188de4d51e276740c0ad4
 </head>
 <body>
     <div>
@@ -32,7 +28,7 @@
         <div class="form__login-line"></div>
         <br>
         <h1 class="form__login-line-button">¿No tienes cuenta?</h1>
-        <input class="from__login-registetr" type="button" value="Registrate">
+        <input class="from__login-register" type="button" value="Registrate">
     </div>
 </body>
 </html>
