--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <div>
                 <form action="">
                     <input class="input__search" type="text" placeholder="Buscar una playlist">
-                    <input class="input__button" type="button" value="NUEVA PLAYLIST">
+                    <a href="new-playlist.html"><input class="input__button" type="button" value="NUEVA PLAYLIST"></a>
                 </form>
             </div>
         </div>
