linkee todos los botenes

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -18,7 +18,7 @@
     <div>
         <header>
             <div class="main__header">
-                <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
+                <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
                 <h1 class="header__user" class="col-xl-auto">Usuario</h1>
             </div>
         </header>
@@ -26,7 +26,7 @@
     <div>
         <form class="search__playlist">
             <input class="search__secion-browser" type="text" placeholder="Reggaeton">
-            <input class="search__secion-button" type="button" value="Nueva Playlist">
+            <a href="edit-playlist.html"><input class="search__secion-button" type="button" value="Nueva Playlist"></a>
         </form>
         <h1>Playists</h1>
         <div class="container">
