--- a/edit-playlist.html
+++ b/edit-playlist.html
@@ -19,7 +19,7 @@
         <div>
             <header>
                 <div class="main__header">
-                    <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
+                    <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
                     <h1 class="header__user" class="col-xl-auto">Usuario</h1>
                 </div>
             </header>
