--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
-<<<<<<< HEAD
         <link rel="stylesheet" href="css/login.css">
-=======
-        <link rel="stylesheet" href="css/home.css">
->>>>>>> e630f36705f4bd8caf8188de4d51e276740c0ad4
 </head>
 <body>
+    <header>
+        <div class="main__header">
+            <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
+        </div>
+    </header>
     <div>
         <h1 class="form__login-top">Para continuar, inicia sesión</h1>
         <form class="form__login" action="">
@@ -32,7 +33,7 @@
         <div class="form__login-line"></div>
         <br>
         <h1 class="form__login-line-button">¿No tienes cuenta?</h1>
-        <input class="from__login-registetr" type="button" value="Registrate">
+        <a href="register.html"><input class="from__login-registetr" type="button" value="Registrate"></a>
     </div>
 </body>
 </html>
