--- a/register.html
+++ b/register.html
@@ -45,5 +45,14 @@
         <br>
         <a href="login.html"><input class="form__register-login" type="button" value="Inicia sesión"></a>
     </div>
+    <div class="main__footer">
+        <footer>
+            <div>
+                <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
+                <h1 class="footer__powered-by">Powered by</h1>
+                <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
