--- a/search-playlist.html
+++ b/search-playlist.html
@@ -80,5 +80,14 @@
             </div>
         </div>
     </div>
+    <div class="main__footer">
+        <footer>
+            <div>
+                <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
+                <h1 class="footer__powered-by">Powered by</h1>
+                <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
