posicione bien el header y centre los inputs

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
             <header>
                 <div class="main__header">
                     <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
-                    <a href="register.html" class="header__register header__login-register">Registrate</a>
-                    <a href="login.html" class="header__login header__login-register">Iniciar Sesión</a>
+                    <a href="register.html" class="header__register header__login-register" class="col-xl-auto">Registrate</a>
+                    <a href="login.html" class="header__login header__login-register" class="col-xl-auto">Iniciar Sesión</a>
                 </div>
             </header>
         </div>
@@ -31,8 +31,10 @@
             </div>
             <div>
                 <form action="">
-                    <input class="input__search" type="text" placeholder="Buscar una playlist">
-                    <a href="new-playlist.html"><input class="input__button" type="button" value="NUEVA PLAYLIST"></a>
+                    <div class="home__input">
+                        <input class="input__search" type="text" placeholder="Buscar una playlist">
+                        <a href="new-playlist.html"><input class="input__button" type="button" value="NUEVA PLAYLIST"></a>
+                    </div>
                 </form>
             </div>
         </div>
