agregue un div al footer

--- a/home.html
+++ b/home.html
@@ -47,9 +47,9 @@
         <div class="main__footer">
             <footer>
                 <div>
+                    <div class="footer__border"></div>
                     <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
                     <h1 class="footer__powered-by">Powered by</h1>
-                    <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </div>
             </footer>
         </div>
