bien centrado todo

--- a/new-playlist.html
+++ b/new-playlist.html
@@ -33,13 +33,10 @@
         </div>
         <div>
             <form class="form__search" action="">
-                <div class="row">
-                    <div>
-                        <input class="input__search" class="col-xl-2" type="text" placeholder="Busca una canción">
-                    </div>
-                </div>
-                <div class="row">
+                <div class="new-playlist__input">
                     <input class="input__playlist-name" type="text" value="Baila sin parar">
+                    <br>
+                    <input class="input__search" class="col-xl-2" type="text" placeholder="Busca una canción">
                 </div>
             </form>
         </div>
