probe el footer

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <div>
                 <form action="">
                     <div class="home__input">
-                        <input class="input__search" type="text" placeholder="Buscar una playlist">
+                        <a href="search-playlist.html"><input class="input__search" type="text" placeholder="Buscar una playlist"></a>
                         <a href="new-playlist.html"><input class="input__button" type="button" value="NUEVA PLAYLIST"></a>
                     </div>
                 </form>
@@ -48,8 +48,8 @@
 
         <div class="main__footer">
             <footer>
+                <div class="footer__border"></div>
                 <div>
-                    <div class="footer__border"></div>
                     <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
                     <h1 class="footer__powered-by">Powered by</h1>
                 </div>
