--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
         <form class="form__login" action="">
             <input class="form__login-username" type="text" placeholder="Correo electrónico o nombre de usuario">
             <br>
+            <br>
             <input class="form__login-pasword" type="password" placeholder="Contraseña">
         </form>
         <br>
@@ -33,11 +34,7 @@
         <div class="form__login-line"></div>
         <br>
         <h1 class="form__login-line-button">¿No tienes cuenta?</h1>
-<<<<<<< HEAD
-        <input class="from__login-register" type="button" value="Registrate">
-=======
-        <a href="register.html"><input class="from__login-registetr" type="button" value="Registrate"></a>
->>>>>>> edd823e654e9378cb4fb986f2b0ceeae369b8181
+        <a href="register.html"><input class="from__login-register" type="button" value="Registrate"></a>
     </div>
 </body>
 </html>
