añadi los enlaces faltantes

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <input class="form__login-username" type="text" placeholder="Correo electrónico o nombre de usuario">
             <br>
             <br>
-            <input class="form__login-pasword" type="password" placeholder="Contraseña">
+            <a href="home.html"><input class="form__login-pasword" type="password" placeholder="Contraseña"></a>
         </form>
         <br>
         <form action="">
