--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
             <input type="radio" type="radio">Femenino
             <input type="radio" type="radio">Otro
         </form>
-        <input class="form__register-button" type="button" value="REGISTRATE">
+        <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
         <br>
         <div class="form__register-line"></div>
         <br>
