--- a/search-playlist.html
+++ b/search-playlist.html
@@ -30,7 +30,7 @@
         <h1>Playists</h1>
         <div class="container">
             <div class="row">
-                <div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton">
+                <a href="edit-playlist.html"><div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton"></a>
                     <h3>Full Regaeton</h3>
                     <p>15 Canciones</p>
                 </div>
