no me acuerdo que cambie

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -23,8 +23,10 @@
     </div>
     <div>
         <form class="search__playlist">
-            <input class="search__secion-browser" type="text" placeholder="Reggaeton">
-            <a href="edit-playlist.html"><input class="search__secion-button" type="button" value="Nueva Playlist"></a>
+            <div class="input__search-playlist">
+                <input class="search__secion-browser" type="text" placeholder="Reggaeton">
+                <a href="edit-playlist.html"><input class="search__secion-button" type="button" value="Nueva Playlist"></a>
+            </div>
         </form>
         <h1>Playists</h1>
         <div class="container">
